--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGODB_URI=mongodb+srv://raj-atlas:test1234@raj-mern.8afcmuj.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzUxMiJ9
+NODE_ENV=production
