--- a/package.json
+++ b/package.json
@@ -3,17 +3,7 @@
   "version": "1.0.0",
   "description": "Mern Demo",
   "main": "server.js",
-  "scripts": {
-    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
-    "start:prod": "node server.js",
-    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
-    "client": "cd client && npm run start",
-    "install": "cd client && npm install",
-    "build": "cd client && npm run build",
-    "heroku-postbuild": "npm run build",
-    "lint": "eslint **/*.js --quiet",
-    "fix": "eslint --fix ."
-  },
+  "scripts": {},
   "author": "",
   "license": "ISC",
   "devDependencies": {
