--- a/client/package.json
+++ b/client/package.json
@@ -1,4 +1,4 @@
-{
+6{
   "name": "mern",
   "version": "0.1.0",
   "description": "Mern Demo",
@@ -20,7 +20,7 @@
     "react-draft-wysiwyg": "^1.14.5",
     "react-dropdown-date": "^2.2.3",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "^3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
