--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,13 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3"
   },
+    "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  },
+  
   "browserslist": {
     "production": [
       ">0.2%",
